syntax = "proto3";

option go_package = "./pb";

package pb;

message UsernameReq {
  string username = 1;
}

message UserInfo {
  optional uint64 id = 1;
  optional uint64 status = 2;
  optional string username = 3;
  optional string password = 4;
  optional string nickname = 5;
  optional string description = 6;
  optional string homePath = 7;
  repeated uint64 roleIds = 8;
  optional string mobile = 9;
  optional string email = 10;
  optional string avatar = 11;
  optional uint64 departmentId = 12;
  repeated uint64 positionIds = 13;
  repeated string roleCodes = 14;
  repeated string roleName = 15;
  optional string departmentName = 16;

  optional uint64 createdAt = 17;
  optional uint64 updatedAt = 18;
}

message UsernameRes {
  UserInfo userInfo = 1;
}

message TokenInfo {
  optional uint64 id = 1;
  optional uint64 status = 2;
  optional uint64 userId = 3;
  optional string username = 4;
  optional string token = 5;
  optional string source = 6;
  optional uint64 expiredAt = 7;
  optional uint64 createdAt = 8;
  optional uint64 updatedAt = 9;
}

message TokenInfoReq {
  TokenInfo tokenInfo = 1;
}

message TokenInfoRes {
  uint64 id = 1;
  string token = 2;
}

message IDReq {
  uint64 id = 1;
}

message IDSReq {
  repeated uint64 ids = 1;
}

message UserInfoRes {
  UserInfo userInfo = 1;
}

message MenuInfo {
  optional uint64 id = 1;
  optional uint64 level = 2;
  optional uint64 parentId = 3;
  optional string path = 4;
  optional string name = 5;
  optional string redirect = 6;
  optional string component = 7;
  optional uint64 sort = 8;
  optional bool disabled = 9;
  optional uint64 menuType = 10;
  optional string serviceName = 11;
  optional string permission = 12;
  optional Meta meta = 13;

  optional uint64 createdAt = 14;
  optional uint64 updatedAt = 15;
  optional uint64 deletedAt = 16;
}

message Meta {
  optional string title = 1;
  optional string icon = 2;
  optional bool hideMenu = 3;
  optional bool hideBreadcrumb = 4;
  optional bool ignoreKeepAlive = 5;
  optional bool hideTab = 6;
  optional string frameSrc = 7;
  optional bool carryParam = 8;
  optional bool hideChildrenInMenu = 9;
  optional bool affix = 10;
  optional uint64 dynamicLevel = 11;
  optional string realPath = 12;
}

message MenuInfoList {
  uint64 total = 1;
  repeated MenuInfo menuInfo = 2;
}

service User {
  // 根据用户名获取用户详情
  rpc getUserByUsername (UsernameReq) returns (UsernameRes);

  //获取用户详细信息
  rpc getUserInfoById (IDReq) returns (UserInfoRes);
}

service Token {
  // 生成Token
  rpc createToken (TokenInfoReq) returns (TokenInfoRes);
}

service Menu {
  // 根据角色id 获取菜单 -- 目前系统用这个 可以方便用户切换角色获取不一样的菜单
  rpc getMenuListByRoleId (IDReq) returns (MenuInfoList);

  // 根据角色ids 获取菜单
  //  rpc getMenuListByRoleIds (IDSReq) returns (MenuInfoList);
}